--- a/basic/web/css/gumby.css
+++ b/basic/web/css/gumby.css
@@ -1676,3 +1676,18 @@ table.rounded thead th, table.rounded thead td, table.rounded caption + tbody tr
 .ie8 .ttip:hover:before, .ie8 .ttip:hover:after { display: block; }
 
 .ie9 .radio.checked i, .ie9 .checkbox.checked i { top: 0; }
+
+.row { max-width: 1140px; }
+
+.navbar .logo { margin: 0; }
+.navbar .logo > a > *, .navbar .logo > a { vertical-align: middle; }
+.navbar .logo span { color: white; font-size: 2rem; font-weight: 300; padding-left: 1rem; border-left: 1px solid white; }
+
+#main-nav { float: right; }
+
+h1, h2, h3, h4, h5, h6 { font-weight: 300; }
+
+body#home { text-align: center; }
+
+#home header h1 { padding: .5em 0 .125em 0; }
+#home header h4 { color: #999; }
