--- a/basic/web/sass/_custom.scss
+++ b/basic/web/sass/_custom.scss
@@ -1,1 +1,42 @@
 // Your custom SCSS should be written here...
+.row {
+  max-width: 1140px;
+}
+
+.navbar .logo {
+  margin: 0;
+
+  > a > *, > a {
+    vertical-align: middle;
+  }
+
+  span {
+    color: white;
+    font-size: 2rem;
+    font-weight: 300;
+    padding-left: 1rem;
+    border-left: 1px solid white;
+  }
+}
+
+#main-nav {
+  float: right;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 300;
+}
+
+body#home {
+  text-align: center;
+}
+
+#home header {
+  h1 {
+    padding: .5em 0 .125em 0;
+  }
+
+  h4 {
+    color: #999;
+  }
+}
