--- a/basic/web/sass/_custom.scss
+++ b/basic/web/sass/_custom.scss
@@ -49,8 +49,17 @@ body#home {
 
 }
 
-table.query-result thead tr th {
-  font-weight: normal;
+table.query-result {
+
+  thead tr th {
+    font-weight: normal;
+  }
+
+  tbody tr td {
+    max-width: 140px;
+    word-wrap: break-word;
+  }
+  
 }
 
 #floatingBarsG {
@@ -270,4 +279,17 @@ table.query-result thead tr th {
     background-color: #FFFFFF
   }
 
+}
+
+.wrapper.loader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+
+  > section {
+    position: relative;
+    top: 50%;
+  }
 }
